Added orbit map + orbit info overlay

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -164,6 +164,34 @@ MODULE
 		}
 	}
 	
+	PAGE // Orbit data
+	{
+		name = infoOrbitMap
+		text = $$$
+		
+		BACKGROUNDHANDLER
+		{
+			name = JSIOrbitDisplay
+			method = RenderOrbit
+			backgroundColor =		35,  35,  35,  255
+			
+			iconColorSelf =			255, 255, 255, 255
+			orbitColorSelf =		0,   141, 208, 255
+			orbitColorNextNode =	0,   142, 63,  255
+			iconColorShadow =		255, 255, 255, 0
+			iconColorAP =			0,   25,  215, 255
+			iconColorPE =			0,   25,  215, 255
+			iconColorTarget =		255, 184, 0,   255
+			iconColorClosestApproach = 248, 153, 0, 255
+			
+			iconPixelSize = 24
+			iconShadowShift = 1
+			
+			orbitPoints = 360
+			orbitDisplayPosition = 0,32,960,896
+		}
+	}
+	
 	PAGE // Resources data, most common
 	{
 		name = infoResources_common
