--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -36,6 +36,8 @@ TahvMFDConfig
 		
 		GROUP{
 			name = Orbit
+			wordsOverlay =  TahvohckMFD/pages/overlayOrbitPages.txt
+			
 			CONTEXTREDIRECT
 			{
 				name = subpages
