--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -56,8 +56,10 @@
 			@redirect,0 = escape,	menuDefault
 		}
 	}
-	@PAGE[infoOrbitData]
+	@PAGE[infoOrbit*],*
 	{
+		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Orbit]/wordsOverlay$
+		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 		#@TahvMFDConfig/INFOPAGES/GROUP[Orbit]/CONTEXTREDIRECT {}
 	}
