Made crew page a subpage of Mission info... logs will go here too eventually

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -30,8 +30,7 @@ TahvMFDConfig
 			redirect = btn1,	infoOrbitData
 			redirect = btn2,	infoResources_common
 			redirect = btn3,	infoMission
-			redirect = btn4,	infoCrewRoster
-			redirect = btn5,	infoAltgraph
+			redirect = btn4,	infoAltgraph
 		}
 		
 		GROUP{
@@ -58,6 +57,18 @@ TahvMFDConfig
 				redirect = btn8,	infoResources_2
 				redirect = btn9,	infoResources_3
 				redirect = btn10,	infoResources_?
+			}
+		}
+		
+		GROUP{
+			name = Mission
+			wordsOverlay = TahvohckMFD/pages/overlayMissionPages.txt
+			
+			CONTEXTREDIRECT
+			{
+				name = subpages
+				redirect = btn6,	infoMission
+				redirect = btn7,	infoCrewRoster
 			}
 		}
 	}
