--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -74,11 +74,17 @@
 	}
 	@PAGE[infoMission]
 	{
+		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Mission]/wordsOverlay$
+		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+		#@TahvMFDConfig/INFOPAGES/GROUP[Mission]/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoCrewRoster]
 	{
+		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Mission]/wordsOverlay$
+		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+		#@TahvMFDConfig/INFOPAGES/GROUP[Mission]/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoAltgraph]
 	{
