Adding color tags to the settings, even if I can't use them yet

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -8,6 +8,9 @@ TahvMFDConfig
 	
 	colorTagDefault =	[#ffffff]
 	colorTagHighlight =	[#7777ff]
+	colorTagRed =		[#CC3333]
+	colorTagGreen = 	[#009933]
+	colorTagYellow =	[#CCCC00]
 	
 	FLIGHTPAGES{
 		CONTEXTREDIRECT
