Rough page for celestial target data

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -271,6 +271,12 @@ MODULE
 			distanceFormatString = <=0:SIP_9.3=>m
 		}
 	}
+	
+	PAGE
+	{
+		name = tpCelestialData
+		text = TahvohckMFD/pages/targetPageCelestialData.txt
+	}
 // -------------------------------------------------------------------
 // --------------------Page D Functions-------------------------------
 // Page D is Camera Control
