--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -108,6 +108,10 @@
 			-redirect,0 = ""
 		}
 	}
+	@PAGE[tpCelestialData]
+	{
+		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
+	}
 // --------------------------------------------------
 // Apply  settings to camera pages
 // --------------------------------------------------
