Added flight log to mission node

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -228,6 +228,17 @@ MODULE
 		text = TahvohckMFD/pages/infoPageCrewRoster.txt
 	}
 	
+	PAGE
+	{
+		name = infoFlightLog
+		PAGEHANDLER
+		{
+			name = JSIFlightLog
+			method = ShowLog
+			pageTitle = ======================== Flight Log ========================
+		}
+	}
+	
 	PAGE // Altitude grapher
 	{
 		name = infoAltgraph
