--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -72,6 +72,7 @@ TahvMFDConfig
 				name = subpages
 				redirect = btn6,	infoMission
 				redirect = btn7,	infoCrewRoster
+				redirect = btn8,	infoFlightLog
 			}
 		}
 	}
