--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -86,6 +86,14 @@
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 		#@TahvMFDConfig/INFOPAGES/GROUP[Mission]/CONTEXTREDIRECT {}
 	}
+	@PAGE[infoFlightLog]
+	{
+		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Mission]/wordsOverlay$
+		@localMargins = 0,1,0,1
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+		#@TahvMFDConfig/INFOPAGES/GROUP[Mission]/CONTEXTREDIRECT {}
+	}
 	@PAGE[infoAltgraph]
 	{
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
