Added DPAI page to flight screen

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -126,6 +126,35 @@ MODULE
 		text = TahvohckMFD/pages/flightPageLanding.txt
 	}
 	
+	PAGE // Docking Port Alignment Indicator
+	{
+		name = fpDPAI
+		text = Loading DPAI.exe...$$$Error: Docking computer not installed
+        PAGEHANDLER
+        {
+            name = DPAI_RPM
+            method = getPageText
+            buttonUp = 0
+            buttonDown = 1
+            buttonEnter = 2
+            buttonEsc = 3
+            buttonHome = 4
+            buttonLeft = 10
+            buttonRight = 11
+            buttonNext = 12
+            buttonPrev = 13
+            multiHandler = true
+        }
+        BACKGROUNDHANDLER
+        {
+            name = DPAI_RPM
+            method = DrawDPAI
+            buttonClickMethod = ButtonProcessor
+            pageActiveMethod = pageActiveMethod
+            multiHandler = true
+        }
+	}
+	
 // -------------------------------------------------------------------
 // --------------------Page B Functions-------------------------------
 // Page B is Information Systems
