--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -21,6 +21,7 @@ TahvMFDConfig
 			redirect = btn1,	flightDisplay
 			redirect = btn2,	fpTakeoff
 			redirect = btn3,	fpLanding
+			redirect = btn4,	fpDPAI
 		}
 	}
 	
