--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -46,6 +46,15 @@
 	{
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
+	@PAGE[fpDPAI]
+	{
+		//#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
+		@CONTEXTREDIRECT[]{
+			-redirect,0 = ""
+			-redirect,0 = ""
+		}
+		
+	}
 // --------------------------------------------------
 // Apply  settings to info pages
 // --------------------------------------------------
