Created helper dll for advanced custom variables

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -40,7 +40,13 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn10,	sleepPage
+			redirect = btn8,	debugPage
 		}
+	}
+	
+	PAGE{
+		name = debugPage
+		text = TahvohckMFD/pages/debug.txt
 	}
 
 	PAGE // Shutdown page
