--- a/custom_variables.cfg
+++ b/custom_variables.cfg
@@ -19,3 +19,18 @@ RPM_CUSTOM_VARIABLE
 		range =	-10, 0.1
 	}
 }
+
+RPMCVARIABLEHANDLER
+{
+    name = TMFD
+    method = getCustomVariable
+    variable = TMFD_AVAILABLE,0
+	variable = TMFD_DSDUMP, Can't do DS Dump.
+	variable = TMFD_HIGHLIGHT,	BADCOLOR
+	variable = TMFD_NOCOLOR,	BADCOLOR
+	variable = TMFD_RED,		BADCOLOR
+	variable = TMFD_GREEN,		BADCOLOR
+	variable = TMFD_YELLOW,		BADCOLOR
+	variable = TMFD_WARNBLINK,	BADBLINK
+	variable = TMFD_VERSION, ???
+}
