--- a/custom_variables.cfg
+++ b/custom_variables.cfg
@@ -36,4 +36,5 @@ RPMCVARIABLEHANDLER
 	
 	variable = TMFD_VERSION, ???
 	variable = TMFD_SASSTRING5, <--->
+	variable = TMFD_SASSTRING16, <-------------->
 }
