Adding MECO_OR_THROTTLE variables to clean up page definitions

--- a/custom_variables.cfg
+++ b/custom_variables.cfg
@@ -37,4 +37,6 @@ RPMCVARIABLEHANDLER
 	variable = TMFD_VERSION, ???
 	variable = TMFD_SASSTRING5, <--->
 	variable = TMFD_SASSTRING16, <-------------->
+	variable = TMFD_MECO_OR_THROTTLE, <-------------->
+	variable = TMFD_LONGMECO_OR_THROTTLE, <---------------------------->
 }
