Made the MECO string configurable
-Also moved a few class variables around for better readability

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -13,6 +13,9 @@ TahvMFDConfig
 		colorTagRed =		[#CC3333]
 		colorTagGreen = 	[#009933]
 		colorTagYellow =	[#CCCC00]
+		
+		shortMECOString =	[#CC4499]>>>---MECO---<<<
+		longMECOString =	[#CC4499]>>>----------MECO----------<<<
 	}
 	
 	FLIGHTPAGES{
