--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -7,7 +7,7 @@ TahvMFDConfig
 	noSwitchTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 	
 	DeepSettings{
-		version = v0.5a
+		version = v0.6.159 alpha
 		colorTagDefault =	[#ffffff]
 		colorTagHighlight =	[#7777ff]
 		colorTagRed =		[#CC3333]
