Implemented a clamped radar value
Both clamp string and clamp height are configurable

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -10,6 +10,9 @@ TahvMFDConfig
 		
 		shortMECOString =	[#CC4499]>>>---MECO---<<<
 		longMECOString =	[#CC4499]>>>----------MECO----------<<<
+		
+		clampedRadarString = -----
+		clampRadarAt =		15000
 	}
 	
 	defaultTextureOverlay = Hyomoto/MFD/images/genericOverlay
