--- a/custom_variables.cfg
+++ b/custom_variables.cfg
@@ -39,4 +39,6 @@ RPMCVARIABLEHANDLER
 	variable = TMFD_SASSTRING16, <-------------->
 	variable = TMFD_MECO_OR_THROTTLE, <-------------->
 	variable = TMFD_LONGMECO_OR_THROTTLE, <---------------------------->
+	
+	variable = TMFD_CLAMPEDRADAR, -----
 }
