--- a/Source/TMFD_Helpers/TMFD_Helpers.csproj
+++ b/Source/TMFD_Helpers/TMFD_Helpers.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\Class1.cs" />
+    <Compile Include="Source\TMFD_Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
