Set up default values in the code.

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -1,17 +1,18 @@
 TahvMFDConfig
 {
 	DeepSettings{
-		version = v0.6.159 alpha
-		colorTagDefault =	[#ffffff]
-		colorTagHighlight =	[#7777ff]
-		colorTagRed =		[#CC3333]
-		colorTagGreen = 	[#009933]
-		colorTagYellow =	[#CCCC00]
+		// Commented lines are defaults, left in for documentation.
+		//colorTagDefault =	[#ffffff]
+		//colorTagHighlight =	[#7777ff]
+		//colorTagRed =		[#CC3333]
+		//colorTagGreen = 	[#009933]
+		//colorTagYellow =	[#CCCC00]
 		
-		shortMECOString =	[#CC4499]>>>---MECO---<<<
-		longMECOString =	[#CC4499]>>>----------MECO----------<<<
+		//version = v0.6.159 alpha
+		//shortMECOString =	[#CC4499]>>>---MECO---<<<
+		//longMECOString =	[#CC4499]>>>----------MECO----------<<<
 		
-		clampedRadarString = -----
+		//clampedRadarString = -----
 		clampRadarAt =		15000
 	}
 	
